# 2024_SEALab-BABIES-analyses

./: .gitignore  pyproject.toml
notebooks/: bx.ipynb  exploratory-analyses.ipynb
scripts/: get_freesurfer_stats.py
utils/: __init__.py  io.py  paths.py  redcap.py
