[project]
name = "2024-sealab-babies-analyses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
notebook = ["nb-clean", "ipykernel"]
